code/java/RealTimeNews/v3/docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md


# PostNewsArticleListByInstrumentRequestDataIdentifier

Set of identifiers and their type.

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**values** | **java.util.Set&lt;String&gt;** | Set of identifiers to resolve. | 
**type** | [**TypeEnum**](#TypeEnum) | Type of the identifier. | 



## Enum: TypeEnum

Name | Value
---- | -----
IDINSTRUMENT | &quot;idInstrument&quot;
IDNOTATION | &quot;idNotation&quot;
FDSPERMANENTIDENTIFIERSECURITY | &quot;fdsPermanentIdentifierSecurity&quot;
FDSPERMANENTIDENTIFIERLISTING | &quot;fdsPermanentIdentifierListing&quot;
FDSPERMANENTIDENTIFIERREGIONAL | &quot;fdsPermanentIdentifierRegional&quot;
TICKEREXCHANGE | &quot;tickerExchange&quot;
TICKERREGION | &quot;tickerRegion&quot;
SEDOL | &quot;sedol&quot;
ISIN | &quot;isin&quot;
WKN | &quot;wkn&quot;
VALOR | &quot;valor&quot;
CUSIP | &quot;cusip&quot;


## Implemented Interfaces

* Serializable


